[package]
name = "motion_profiling"
version = "0.1.3"
edition = "2021"


[dependencies]
simba = { version = "0.9.0", default-features = false, features = [
    "libm_force",
] }
nalgebra = { version = "0.33.0", default-features = false, features = [
    "macros", "alloc"
] }
#vexide = { git = "https://github.com/vexide/vexide.git" }
uom = { version = "0.36.0", default-features = false, features = ["f64", "si"] }
serde_json = { version = "^1.0.125", default-features = false, features = ["alloc"], optional = true }
serde = { version = "^1.0.208", default-features = false, features = ["alloc", "derive"], optional = true }
interp = "1.0.3"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

[features]
default=["serde_support"]
serde_support=["dep:serde_json", "dep:serde"]
